css/custom.css
/* ... */
.informaltable table tbody td{
	padding: 10px;
	border: 1px solid #ECECEC;
    padding: 5px;
}
.informaltable table tbody td p{
	margin: 0px;
	font-family: 'Roboto', Helvetica, sans-serif;
	margin-left: 5px;
}
.informaltable table tbody td p code.literal {
	margin-left: 0;
}
/*Section Complete on titles*/
.completed-section {
	border-left: 5px solid #51A796;
}
@media(min-width:768px) {
	.reader-container p {
		font-size: 1.6rem;
		line-height: 1.6em;
		margin-bottom: 30px
	}
}
@media(min-width:992px) {
	/*Extending Search Bar on devices over 992px wide*/
	.navbar-form .form-group .form-control:focus,.navbar-form .form-group .form-control:active {
		width: 350px;
		-webkit-transition: all 0.5s ease;
		-moz-transition: all 0.5s ease;
		-o-transition: all 0.5s ease;
		transition: all 0.5s ease;
	}
	.navbar-form .form-group .form-control {
		width:200px;
	    -webkit-transition: all 0.5s ease;
	    -moz-transition: all 0.5s ease;
	    -o-transition: all 0.5s ease;
	    transition: all 0.5s ease;
	}
}

/* New CSS Rules for Skills Platform */
.jumbotron.heading {
    padding-bottom: 15px;
    padding-top: 65px;
    background: #677280;
}
.jumbotron h1 {
  font-weight: 100;
  font-size: 24px;
  color: white;
}
@media(min-width:768px) {
    .reader-container p {
      font-size: 1.6rem;
      line-height: 2.3em;
      margin-bottom: 30px
    }
    .jumbotron h1 {
      font-weight: 100;
      font-size: 36px;
  }
}
.jumbotron ol {
    background: none;
    padding-top: 0px;
    margin-bottom: 5px;
    font-size: 14px;
}
.jumbotron ol>li {
      color: rgba(255,255,255,0.7) !important;
}
.jumbotron ol a:hover,.jumbotron ol a:focus {
    text-decoration: none;
}
.jumbotron ol a {
    color: rgba(255,255,255,0.9);
}
.jumbotron .progress {
  height: 3px;
  margin-bottom: 0px;
}
.jumbotron .thumbnail {
  margin-top: 70px;
  margin-bottom: -10px;
  background: none;
  color: #eee;
  border: none;
}
.jumbotron .thumbnail span {
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 0px;
}
.panel.panel-default, .panel.panel-default>.panel-heading {
    border-radius: 0px;
}
.sidebar-nav>.panel.panel-default {
    border-radius: 0px;
    box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -webkit-box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -moz-box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -o-box-shadow: inset -3px 1px 9px -4px #ABABAB;
}
.sidebar-nav>.panel-default > .panel-heading {
    border-radius: 0px;
    box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -webkit-box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -moz-box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -o-box-shadow: inset -3px 1px 9px -4px #ABABAB;
}
.sidebar-nav>.panel-default > .panel-footer {
    border-radius: 0px;
    box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -webkit-box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -moz-box-shadow: inset -3px 1px 9px -4px #ABABAB;
    -o-box-shadow: inset -3px 1px 9px -4px #ABABAB;
}
.sidenav-menu {
  font-weight: 300;
  font-size: 15px;
}
/* Hiding the Icons for the sidenav */
.sidenav-menu-holder i {
  display: none;
}
/* Hiding the Icons for the sidenav END */

.clickable:hover {
    cursor:pointer 
}
.clickable {
  cursor:pointer;
}
span.input-group-btn button.btn {
    height: 34px;
    padding-top: 8px;
}
.faux-panel {
    border: 1px solid;
    border-color: #ddd;
    height: 5px;
    border-bottom: 0;
    margin: 0 4px 0 4px;
    background: #FEFEFE;
}
.faux-1st {
    margin: 0 4px 0 4px;
    background: #FEFEFE;
}
.faux-2nd {
    margin: 0 8px 0 8px;
    background: #FCFCFC;
}
.sm-card-icon {
    font-size: 48px;
}
.skillcard {
  padding: 0px;
  
}
.inner-skillcard {
/*  display: table;*/
}
.left-skillcard {
/*    background-color: white;
    display: table-cell;
    padding:  30px;
    padding-bottom: 20px;*/
}
.top-skillcard {
    background-color: whitesmoke;
    padding:  25px;
    padding-left: 40px;
    padding-bottom: 15px;
    border-bottom: 1px solid #eee;
}
.right-skillcard {
/*    background-color: white;
    border-left: 1px solid #eee;
    float: none;
    display: table-cell;
    padding: 15px;
    padding-bottom: 20px;*/
}
.breadcrumb.title-buttons > li + li:before {
    padding: 0 5px;
    color: #ccc;
    font-family: fontAwesome;
    content: "\00a0";
}
.tech-icon {
  height:60px;
  padding: 5px;
  float: left;
  margin-right: 10px;
}
.tech-icon-sm {
  height: 70px;
  width: auto;
  padding: 5px;
}
.img-thumbnail.tech-icon-sm,.img-thumbnail.tech-icon {
  padding: 0px;
}
.card-heading {
  margin-top: 15px;
  font-size: 24px;
  font-weight: 500;
  margin-bottom: 20px;
}
.sm-card-heading {
  margin-top: 10px;
  font-size: 16px;
  font-weight: 500;
  margin-bottom: 10px;
}
.left-skillcard li {
  list-style-position: outside;

  line-height: 1.8em;
  background: url(images/bullet.png) no-repeat left top;
  padding: 0px 0px 10px 35px;
  /* reset styles (optional): */
  list-style: none;
  margin: 0;
}
.left-skillcard ul {
  padding: 20px;
  padding-bottom: 0px;
}
.sm-card {
  height: 175px;
  width: 100%;
}
.sm-card>.panel-heading {
  height: 175px;
}
.inner-card-sm {
  padding-left: 0px;
  padding-right: 0px;
  margin-bottom: 15px;
  text-align: center;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}
.python {
  border:none;
  border-left: 10px solid #2b5b84 !important;
}
.mysql {
  border:none;
  border-left: 10px solid #f8981d !important;
} 

.django {
  border:none;
  border-left: 10px solid #40684A !important;
}
.java {
  border:none;
  border-left: 10px solid #2962B0  !important;
}
.docker {
  border:none;
  border-left: 10px solid #46b0e7  !important;
}
.jira {
  border:none;
  border-left: 10px solid #205081  !important;
}
.android {
  border:none;
  border-left: 10px solid #9ACA42  !important;
}
.git {
  border:none;
  border-left: 10px solid #f05033  !important;
}
.ni-progress {
  border:dashed 2px #ccc;
  padding:  15px;
  text-align: center;
}
.ni-progress h4 {
  color: #bbb;
}
/* ... */

